# rocket-man

./: .gitignore  Cargo.toml
assets/audio/channels/channel_10/: .radio_config
assets/audio/channels/channel_6/: .radio_config
assets/audio/channels/convo/: .radio_config
assets/audio/channels/files/: .radio_config
assets/audio/channels/lahr_tower/: .radio_config
assets/cf104/: cf104.glb  cf104_console_accessories.gltf  cf104_door_accessories.gltf  meshes.gltf
assets/lahrs_airfeild/: assets.gltf
assets/world/pine_trees/large_pine_tree/: tree.gltf
src/: main.rs  projectile.rs
src/cf104/: mod.rs
src/cf104/console/: altimeter.rs  clock.rs  gyro_compass.rs  mod.rs  radio.rs  speedometer.rs  throttle.rs
src/player/: camera.rs  controls.rs  mod.rs  ui.rs
src/projectile/: control_surfaces.rs  drag.rs  engine.rs  lift.rs  mass.rs  mod.rs  util.rs  weather.rs
src/world/: lahr.rs  mod.rs  util.rs
src/world/ground/: mod.rs
src/world/props/: lahr.rs  mod.rs
