[package]
name = "rocket_man"
version = "0.1.3"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.17.2"
ron = "0.11.0"
serde = { version = "1", features = ["derive"] }
lewton = "0.10"
thiserror = "2"
i_overlay = "4.1.0"
rand = "0.9"
rand_chacha = "0.9"